# mss-stubs

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
mss/: __init__.pyi
