[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mss-stubs"]

[project]
name = "mss-stubs"
version = "0.1.0"
description = "PEP 561 type stubs for the mss screen capture library"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []

[tool.pyright]
typeCheckingMode = "strict"
